# pace-coach

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  install-feature-branch.sh  install.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
menubar/: Package.swift
menubar/Sources/MenuBar/: main.swift
menubar/Sources/MenuBarCore/: Core.swift
menubar/Tests/MenuBarTests/: MenuBarTests.swift
src/: classifier.rs  collector.rs  main.rs  nudge.rs  settings.rs
