[package]
name = "pace-coach"
version = "0.1.0"
edition = "2021"
authors = ["Job Almekinders"]
description = "macOS CLI daemon that watches your typing rhythm and nudges you when you're stressed"
license = "MIT"
repository = "https://github.com/job-almekinders/pace-coach"
keywords = ["macos", "typing", "productivity", "daemon", "cli"]

[[bin]]
name = "pace-coach"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
